# meeshy

./: .dockerignore  .gitignore  .last-snapshot-dir  .swiftlint.yml  ACCESSIBILITY_AUDIT.md  ACTIVATION_DIARISATION_COMPLETE.md  ACTIVATION_MULTI_SPEAKER_TTS.md  ANALYSE-PROBLEME-SCHEMA-SEGMENTS.md  ANALYSE_ARCHITECTURE_INTERFACES_ECHANGE.md  ANALYSE_ARCHITECTURE_TRANSLATOR.md  ARCHITECTURE_CONTACTS.md  ARCHITECTURE_MULTIPART.md  AUDIT_CHAINE_TRADUCTION_AUDIO.md  AUDIT_COHERENCE_TYPES_SCHEMAS.md  AUDIT_FINAL_SCHEMAS.md  AUDIT_HOOKS_REACT.md  AUDIT_PERFORMANCE_VERCEL.md  AUDIT_README.md  AUDIT_SCHEMAS_FASTIFY.md  BACKEND_TRANSLATION_FIX.md  BUBBLE_STREAM_FILES_CREATED.txt  BUBBLE_STREAM_REFACTORING_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE_PARALLEL_GPU.md  COMPARAISON_REPONSE_BACKEND_AVANT_APRES.md  COMPARAISON_TYPES_SOCKETIO_REST.md  CONSTRUCTION_TEXT_TRANSCRIPTION.md  CONTACTS_REFACTORING_COMPLETE.md  CORRECTIFS_SEGMENTS_SOCKETIO.md  CORRECTIFS_SPEAKER_IDS_ET_NO_GUESS.md  CORRECTIFS_TTS_MULTILINGUAL.md  CORRECTIONS_HOOKS_PROPOSEES.md  CORRECTIONS_OPTIMISATION_TRANSCRIPTION.md  CORRECTIONS_PROPOSEES.md  CORRECTIONS_SCHEMAS.ts  CORRECTION_UTILISER_WHISPER_WORDS_NATIF.md  Caddyfile  DASHBOARD_REFACTORING_SUMMARY.md  DELIVERABLES_ACCOUNT_RECOVERY.md  (+127 more)
apps/ios/scripts/: AUDIO_TRANSLATION_TECHNICAL_ARCHITECTURE.md  MEESHY_SAAS_VOICE_ARCHITECTURE.md  README_ML_CONVERSION.md  README_OPENVOICE_SETUP.md  XTTS_ARCHITECTURE_COMPLETE.md  XTTS_MICROSERVICE_ARCHITECTURE.md  activate_voice_cloning.sh  add_mlmodels_to_xcode.rb  archive.sh  build.sh  chatterbox_requirements.txt  chatterbox_voice_translation_test.py  check_localization.py  clean.sh  compare_python_coreml.py  compare_voice_cloning.py  convert_deterministic.py  convert_full_patch.py  convert_instance_patch.py  convert_nllb_split.py  convert_nllb_to_coreml.py  convert_nllb_to_coreml_ane.py  convert_openvoice_fixed_shapes.py  convert_openvoice_full.py  convert_openvoice_minimal.py  convert_openvoice_to_coreml.py  convert_openvoice_to_onnx.py  convert_openvoice_v2_real.py  convert_patched.py  convert_scripted.py  convert_torchscript.py  convert_via_onnx.py  full_voice_pipeline_test.py  improved_voice_cloning.py  pyproject.toml  real_speech.aiff  requirements_voice_cloning.txt  run_app.sh  setup.sh  setup_voice_cloning.sh  (+8 more)
apps/ios/scripts/benchmark_results/: VOICE_CLONING_BENCHMARK_REPORT.md  benchmark_results.json
apps/ios/scripts/chatterbox_translation_test/: results.json
apps/ios/scripts/voice_cloning_output/: results.json
apps/ios/scripts/xtts_translation_test/: results.json
services/translator/: .env.example  .gitignore  ACTIONS_REQUISES.md  ANALYSE_PIPELINE_AUDIO_MULTI_SPEAKER.md  ANALYSE_VOCALE_SPEAKERS.md  API_ZMQ_DOCUMENTATION.md  ARCHITECTURE_AUDIO_TRANSLATION.md  AUDIT_COMPLET_TTS.md  CHANGELOG.md  CHANGELOG_GPU_OPTIMIZATIONS.md  CHATTERBOX_MULTILINGUAL_AUTO_SELECTION.md  CHATTERBOX_TTS_MIGRATION.md  CLAUDE.md  CORRECTIFS_30JAN_FINAL.md  CORRECTIFS_TTS_A_APPLIQUER.md  DIAGNOSTIC-ARCHITECTURE-GLOBALE-ECHEC.md  DIAGNOSTIC_CLONAGE_MULTI_VOIX.md  DIAGRAMME_FLUX_TTS_CORRIGE.md  DIARIZATION_ACTIVE.md  DIARIZATION_CLEANING_GUIDE.md  DIARIZATION_CLEANING_INTEGRATION.md  DIARIZATION_INTEGRATION_EXAMPLE.md  DIARIZATION_SANS_HUGGINGFACE.md  DIARIZATION_SENSITIVITY_TUNING.md  DIARIZATION_ULTRA_STRICT_FIX.md  DOCKERFILE-VARIANTS.md  Dockerfile  Dockerfile.mongodb  Dockerfile.openvoice  Dockerfile.py310  FILTRE_ADAPTATIF_FAUX_POSITIFS.md  FIX-CHATTERBOX-PARALLEL-SYNTHESIS.md  FIX-DIARIZATION-DURATION-OVERLAP.md  FLUX-TEMPS-REEL-SEGMENTS-COMPLET.md  IMPLEMENTATION_COMPLETE_MULTILINGUAL.md  IMPLEMENTATION_FILTRAGE_OVERLAPS_30JAN.md  INDEX_AUDIT_TTS.md  INTEGRATION_GUIDE.md  INTEGRATION_OPENVOICE_COMPLETE.md  INTEGRATION_TRADUCTION_GLOBALE.md  (+85 more)
services/translator/examples/: voice_quality_example.py
services/translator/patches/: diarization_sensitivity_quick_fix.patch
services/translator/scripts/: diagnostic_tts.sh  test-voice-analyzer.sh  test_mms_lingala.py  test_parallel_tts.py  test_parallel_with_lock.py  test_voice_quality_analyzer.py  validate_optimizations.py  verify_mms_facebook.py  verify_mms_models.py
services/translator/src/: __init__.py  main.py
services/translator/src/api/: audio_api.py  translation_api.py  tts_models_api.py  voice_api.py  voice_profile_api.py
services/translator/src/config/: message_limits.py  settings.py  voice_clone_defaults.py  voice_cloning_config.py
services/translator/src/models/: voice_models.py
services/translator/src/services/: __init__.py  analytics_service.py  audio_fetcher.py  audio_message_pipeline.py  database_service.py  diarization_service.py  diarization_speechbrain.py  language_capabilities.py  model_manager.py  quantized_ml_service.py  redis_service.py  segment_serialization.py  transcribe_gap_filler.py  transcription_service.py  (+18 more)
services/translator/tests/: conftest.py  mock_translation_service.py  test_01_model_utils.py  test_03_model_download.py  test_04_service_integration.py  test_05_quantized_service.py  test_06_transcription_service.py  test_07_voice_clone_service.py  test_08_speaker_diarization.py  test_08_tts_service.py  test_09_audio_pipeline_integration.py  test_09_voice_clone_coverage.py  test_10_analytics_service.py  test_10_audio_api_e2e.py  test_11_roundtrip_pipeline.py  test_12_voice_api_services.py  test_13_voice_api_handler.py  test_14_unified_tts_service.py  test_15_voice_profile_handler.py  test_15_voice_translation_e2e.py  test_16_redis_service.py  test_17_tts_models_api.py  test_18_database_service.py  test_19_text_segmentation.py  test_20_synthesizer_segmentation.py  test_20_zmq_server.py  test_21_translation_ml_service.py  test_22_health_api.py  test_23_translation_api.py  test_24_unified_tts_service.py  test_25_multilang_tts_synthesis.py  test_25_quantized_ml_service.py  test_26_translation_pipeline_service.py  test_27_voice_clone_service_extended.py  test_28_voice_api.py  test_28_zmq_voice_handler_dedup.py  test_29_redis_service_extended.py  test_30_message_limits.py  test_30_translation_complete.py  test_31_extended_coverage.py  (+33 more)
(+8468 files in other folders)
