# =============================================================================
# MEESHY TRANSLATOR - Python ML Service
# =============================================================================
# Package manager: uv (https://docs.astral.sh/uv/)
#
# INSTALLATION:
# -------------
# CPU Mode (default):
#   uv sync --extra dev
#
# GPU Mode (override torch with CUDA):
#   UV_EXTRA_INDEX_URL=https://download.pytorch.org/whl/cu124 uv sync --extra dev --reinstall-package torch --reinstall-package torchaudio
#
# DOCKER BUILD:
#   docker build --build-arg TORCH_BACKEND=cpu -t meeshy-translator:cpu .
#   docker build --build-arg TORCH_BACKEND=gpu -t meeshy-translator:gpu .
#
# =============================================================================

[project]
name = "meeshy-translator"
version = "0.1.0"
description = "Meeshy Translator - FastAPI ML Service for translation, STT, and TTS"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Meeshy Development Team", email = "dev@meeshy.me" }
]

# =============================================================================
# Dependencies
# =============================================================================
dependencies = [
    # Configuration
    "python-dotenv>=1.0.0",

    # Framework web
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",

    # Communication gRPC et ZeroMQ
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-reflection>=1.60.0",
    "protobuf>=5.0.0",
    "pyzmq>=26.0.0",

    # PyTorch (CPU by default - override via UV_EXTRA_INDEX_URL for GPU)
    "torch>=2.2.0",
    "torchaudio>=2.2.0",

    # Machine Learning
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "sentencepiece>=0.2.0",
    "huggingface_hub>=0.20.0",
    "safetensors>=0.4.0",
    "transformers>=4.40.0",

    # Cache et base de données
    "redis>=5.0.0",
    "prisma>=0.15.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "pymongo>=4.0.0",

    # Détection de langue et analyse de texte
    "langdetect>=1.0.9",
    "nltk>=3.8.0",
    "textstat>=0.7.0",

    # Utilitaires système
    "psutil>=6.0.0",
    "pandas>=2.0.0,<2.1.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0.0",

    # STT (Speech-to-Text) - faster-whisper (CTranslate2 based)
    "faster-whisper>=1.0.0",

    # TTS (Text-to-Speech) - Chatterbox (Apache 2.0)
    "chatterbox-tts>=0.1.0",

    # Audio Processing
    "pydub>=0.25.0",
    "soundfile>=0.12.0",
    "scipy>=1.10.0",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.0",

    # Logging et monitoring
    "loguru>=0.7.0",
    "prometheus-client>=0.20.0",

    # HTTP client (pinned for Prisma compatibility)
    "httpx>=0.24.0,<0.25.0",
    "httpcore>=0.17.0,<0.18.0",

    # HuggingFace transfer acceleration
    "hf_transfer>=0.1.0",
]

# =============================================================================
# Optional Dependencies
# =============================================================================
[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipython>=8.0.0",
]

# Production optimizations
prod = [
    "orjson>=3.10.0",           # Fast JSON
    "uvloop>=0.19.0; sys_platform != 'win32'",  # Fast event loop
]

# =============================================================================
# UV Configuration
# =============================================================================
[tool.uv]
# Allow mixing packages from PyPI and PyTorch indexes
index-strategy = "unsafe-best-match"

# Constraint to ensure consistent numpy version (chatterbox-tts requirement)
constraint-dependencies = [
    "numpy<2.0.0",
]

# PyTorch source - CPU by default
# Override with UV_EXTRA_INDEX_URL for GPU builds
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

# =============================================================================
# UV Indexes
# =============================================================================
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

# =============================================================================
# Ruff (Linter + Formatter)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "SIM108", # use ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -x"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests requiring GPU",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__pycache__/*", "*/migrations/*"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true

# =============================================================================
# MyPy
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "migrations/"]
